ambient/infoq-devsummit/resources/istio/policy/allow-recommendation-to-purchistory.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-recommendation-to-purchase-history
  namespace: purchase-history
spec:
  selector:
    matchLabels:
      app: purchase-history
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/recommendation/sa/recommendation"]
